set up composer to get config for us

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,11 @@
     "require": {
         "phpmailer/phpmailer": "^6.0"
     },
+    "autoload": {
+        "classmap": [
+            "classes"
+        ]
+    },
     "authors": [
         {
             "name": "Wade Calvert",
