--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "wade/udemy-cms",
     "description": "Udemy CMS Project",
     "require": {
-        "phpmailer/phpmailer": "^6.0"
+        "phpmailer/phpmailer": "^6.0",
+        "pusher/pusher-php-server": "^3.0"
     },
     "autoload": {
         "classmap": [
