--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Udemy CMS Project",
     "require": {
         "phpmailer/phpmailer": "^6.0",
-        "pusher/pusher-php-server": "^3.0"
+        "pusher/pusher-php-server": "^3.0",
+        "vlucas/phpdotenv": "^2.4"
     },
     "autoload": {
         "classmap": [
